cluster/apps/networking/traefik/external/devbin/nodebin/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nodebin
  namespace: external
subsets:
  - addresses:
      - ip: 10.40.0.40
    ports:
      - name: default
        port: 1880
        protocol: TCP
