cluster/apps/networking/traefik/external/devbin/nodebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodebin
  namespace: external
spec:
  ports:
    - name: default
      port: 1880
      protocol: TCP
      targetPort: 1880
  clusterIP: None
  type: ClusterIP
